--- a/jadx-core/build.gradle
+++ b/jadx-core/build.gradle
@@ -12,11 +12,11 @@ ext.jadxClasspath = 'clsp-data/android-5.1.jar'
 dependencies {
     runtime files(jadxClasspath)
     compile 'org.slf4j:slf4j-api:1.7.10'
-    compile files('lib/dx-1.10.jar')
     compile 'commons-io:commons-io:2.4'
     compile 'org.ow2.asm:asm:5.0.3'
     compile 'com.intellij:annotations:12.0'
     compile 'uk.com.robust-it:cloning:1.9.2'
+    compile fileTree(dir: 'lib', include: ['*.jar'])
 }
 
 task wrapper(type: Wrapper) {
