--- a/jadx-core/build.gradle
+++ b/jadx-core/build.gradle
@@ -4,6 +4,7 @@ allprojects {
         jcenter()
     }
 }
+
 apply plugin: 'java'
 apply plugin: 'maven'
 
@@ -22,6 +23,7 @@ dependencies {
 
 artifacts {
   archives file: file('lib/dx-1.10.jar'), name: 'dx', type: 'jar'
+  archives jar
 }
 
 task wrapper(type: Wrapper) {
