--- a/jadx-core/build.gradle
+++ b/jadx-core/build.gradle
@@ -8,12 +8,12 @@ allprojects {
 apply plugin: 'java'
 apply plugin: 'maven'
 
-ext.jadxClasspath = 'clsp-data/android-5.1.jar'
 group = 'com.github.fschrofner'
 
 dependencies {
-    runtime files(jadxClasspath)
-    compile 'org.slf4j:slf4j-api:1.7.10'
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'org.slf4j:slf4j-log4j12:1.7.21'
+    compile 'org.apache.logging.log4j:log4j:2.5'
     compile 'commons-io:commons-io:2.4'
     compile 'org.ow2.asm:asm:5.0.3'
     compile 'com.intellij:annotations:12.0'
@@ -30,12 +30,18 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.7'
 }
 
+task fatJar(type: Jar) {
+  baseName = project.name + '-all'
+  from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+  with jar
+}
+
 install {
   repositories {
     mavenInstaller {
-      addFilter('dx') {artifact, file ->
-	artifact.name == 'dx'
-      }
+      // addFilter('dx') {artifact, file ->
+      // 	artifact.name == 'dx'
+      // }
     }
   }
 }
