--- a/jadx-core/build.gradle
+++ b/jadx-core/build.gradle
@@ -28,18 +28,20 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.7'
 }
 
-task fatJar(type: Jar) {
-  baseName = project.name + '-all'
+jar {
+  baseName = project.name 
   from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-  with jar
 }
 
 install {
   repositories {
     mavenInstaller {
-      // addFilter('dx') {artifact, file ->
-      // 	artifact.name == 'dx'
-      // }
+      addFilter('dx') {artifact, file ->
+      	artifact.name == 'dx'
+      }
+      addFilter('jadx-core') {artifact, file ->
+      	artifact.name == 'jadx-core'
+      }
     }
   }
 }
